Refactoring the AI part. DL:N  this is a pain in the ass.